--- a/home.html
+++ b/home.html
@@ -17,11 +17,11 @@ html, body {
     background:#000;
     color:#f2f2f2;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    overflow:hidden;
+    overflow:hidden; /* internal scroller controls scroll */
 }
 
 /* =========================================================
-   2. TOP NAV (MOBILE FIRST)
+   2. TOP NAV — MOBILE FIRST
    ========================================================= */
 .top-nav {
     position:fixed;
@@ -66,6 +66,8 @@ html, body {
     opacity:0.85;
 }
 
+.nav-links a:hover { opacity:1; color:#f3d688; }
+
 .nav-links a.featured {
     opacity:1;
     border:1px solid rgba(212,175,55,0.85);
@@ -74,7 +76,7 @@ html, body {
 }
 
 /* =========================================================
-   3. DOUBLE ROYAL FRAME (MOBILE FIRST)
+   3. DOUBLE ROYAL FRAME — MOBILE FIRST
    ========================================================= */
 .page-frame-outer {
     position:fixed;
@@ -112,12 +114,12 @@ html, body {
 
 @keyframes leftScroll {
     from { transform:translateY(100%); }
-    to { transform:translateY(-100%); }
+    to   { transform:translateY(-100%); }
 }
 
 @keyframes rightScroll {
     from { transform:translateY(-100%); }
-    to { transform:translateY(100%); }
+    to   { transform:translateY(100%); }
 }
 
 .arabic-border {
@@ -141,11 +143,11 @@ html, body {
 
 @keyframes arabic-scroll {
     from { transform:translateX(0); }
-    to { transform:translateX(-100%); }
+    to   { transform:translateX(-100%); }
 }
 
 /* =========================================================
-   4. PAGE SCROLLER (MOBILE FIRST)
+   4. PAGE SCROLLER — MOBILE FIRST
    ========================================================= */
 .page-scroll {
     position:fixed;
@@ -168,11 +170,10 @@ html, body {
 }
 
 /* =========================================================
-   5. EPÒK MOVEMENT (MOBILE FIRST)
+   5. MOVEMENT BLOCK — MOBILE FIRST
    ========================================================= */
 .movement-block {
-    max-width:100%;
-    margin:0 auto;
+    width:100%;
     border-radius:16px;
     padding:24px 18px;
     background:linear-gradient(135deg, rgba(196,168,107,0.12), rgba(47,93,140,0.14));
@@ -188,29 +189,17 @@ html, body {
 }
 
 .movement-block p {
-    line-height:1.6;
     font-size:0.92rem;
+    line-height:1.6;
     margin-bottom:12px;
 }
 
-.home-music-link {
-    margin-top:14px;
-    display:inline-block;
-    font-size:0.7rem;
-    letter-spacing:0.22em;
-    text-transform:uppercase;
-    color:#f3d688;
-    border-bottom:1px solid rgba(243,214,136,0.5);
-    padding-bottom:6px;
-}
-
 /* =========================================================
-   6. STEP BANNER (MOBILE FIRST)
+   6. STEP BANNER — MOBILE FIRST (FULL IMAGE SAFE)
    ========================================================= */
 .step-banner-wrapper {
     width:100%;
     height:50vh;
-    margin:0 auto;
     border-radius:18px;
     overflow:hidden;
     position:relative;
@@ -220,7 +209,8 @@ html, body {
     position:absolute;
     inset:0;
     background-image:url("./images/12.png");
-    background-size:cover;
+    background-size:contain;     /* 🔒 FULL IMAGE VISIBLE */
+    background-repeat:no-repeat;
     background-position:center;
 }
 
@@ -234,7 +224,7 @@ html, body {
 }
 
 /* =========================================================
-   7. PATCH BABY PREVIEW (MOBILE FIRST)
+   7. PATCH BABY PREVIEW — MOBILE FIRST
    ========================================================= */
 .pb-preview-inner {
     display:flex;
@@ -245,17 +235,17 @@ html, body {
 
 .pb-preview-button img {
     max-width:200px;
+    width:100%;
     height:auto;
+    object-fit:contain;
 }
 
 /* =========================================================
    8. DESKTOP ENHANCEMENTS ONLY
    ========================================================= */
-@media (min-width: 769px) {
+@media (min-width:769px) {
 
-    .nav-links a {
-        font-size:0.82rem;
-    }
+    .nav-links a { font-size:0.82rem; }
 
     .page-frame-outer {
         padding:22px;
@@ -273,26 +263,26 @@ html, body {
         letter-spacing:0.45em;
     }
 
-    .page-scroll {
-        padding:22px;
-    }
+    .page-scroll { padding:22px; }
 
-    .page-inner {
-        padding:88px 6vw 140px;
-    }
+    .page-inner { padding:88px 6vw 140px; }
 
     .movement-block {
         max-width:900px;
+        margin:0 auto;
         padding:32px 24px;
     }
 
-    .movement-block h2 {
-        font-size:1.9rem;
-    }
+    .movement-block h2 { font-size:1.9rem; }
 
     .step-banner-wrapper {
         max-width:1100px;
         height:65vh;
+        margin:0 auto;
+    }
+
+    .step-banner-bg {
+        background-size:cover; /* desktop enhancement */
     }
 
     .pb-preview-inner {
@@ -303,6 +293,7 @@ html, body {
     }
 }
 </style>
+
 
 </head>
 
