--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EPÒK | Universal Page</title>
 
+
+</style>
 /* =========================================================
    1. CORE RESET & MOBILE-FIRST BASE
    ========================================================= */
@@ -278,9 +280,8 @@ img {
   }
 
 }
-
+</style>
 </head>
-
 <body>
 
     <!-- TOP NAV -->
