--- a/movement.html
+++ b/movement.html
@@ -19,8 +19,7 @@ body {
 }
 
 /* =========================================================
-   DOUBLE ROYAL FRAME (FULL PAGE)
-   MOBILE FIRST
+   DOUBLE ROYAL FRAME (FULL PAGE) — MOBILE FIRST
    ========================================================= */
 .page-frame-outer {
     min-height:100vh;
@@ -47,6 +46,7 @@ body {
     pointer-events:none;
     white-space:nowrap;
     overflow:hidden;
+    will-change:transform;
 }
 
 .page-frame-outer::before {
@@ -88,6 +88,7 @@ body {
     display:inline-block;
     padding-left:100%;
     animation:arabic-scroll 18s linear infinite;
+    will-change:transform;
 }
 
 @keyframes arabic-scroll {
@@ -175,6 +176,8 @@ body {
     max-width:100%;
     margin:0 auto;
     padding-top:24px;
+    content-visibility:auto;
+    contain-intrinsic-size:800px;
 }
 
 .epok-panel:first-of-type {
@@ -186,6 +189,8 @@ body {
     height:auto;
     display:block;
     object-fit:contain;
+    image-rendering:auto;
+    will-change:transform;
 }
 
 /* =========================================================
@@ -195,6 +200,8 @@ body {
     max-width:92%;
     margin:96px auto 0;
     text-align:center;
+    content-visibility:auto;
+    contain-intrinsic-size:800px;
 }
 
 .philosophy h2 {
@@ -219,6 +226,8 @@ body {
     max-width:92%;
     margin:96px auto 0;
     text-align:center;
+    content-visibility:auto;
+    contain-intrinsic-size:800px;
 }
 
 .album-section h3 {
@@ -240,6 +249,7 @@ body {
     border-radius:18px;
     box-shadow:0 28px 70px rgba(0,0,0,0.95);
     object-fit:contain;
+    will-change:transform;
 }
 
 .album-download {
@@ -252,6 +262,17 @@ body {
     text-decoration:none;
     border-bottom:1px solid rgba(243,214,136,0.6);
     padding-bottom:6px;
+}
+
+/* =========================================================
+   ACCESSIBILITY & PERFORMANCE — LOCKED
+   ========================================================= */
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration:0.01ms !important;
+        animation-iteration-count:1 !important;
+        transition-duration:0.01ms !important;
+    }
 }
 
 /* =========================================================
@@ -314,6 +335,7 @@ body {
     }
 }
 </style>
+
 
 </head>
 
