--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ html, body {
   letter-spacing: 0.25em;
   color: #fff;
   white-space: nowrap;
+  will-change: transform;
 }
 
 .page-frame-outer::before {
@@ -99,12 +100,14 @@ html, body {
   color: #fff;
   white-space: nowrap;
   overflow: hidden;
+  pointer-events: none;
 }
 
 .arabic-border span {
   display: inline-block;
   padding-left: 100%;
   animation: arabic-scroll 18s linear infinite;
+  will-change: transform;
 }
 
 @keyframes arabic-scroll {
@@ -134,7 +137,8 @@ html, body {
   width: 100%;
   overflow-x: auto;
   white-space: nowrap;
-  padding: 0 4vw;
+  padding: 0 16px; /* FIXED PX FOR MOBILE DENSITY */
+  -webkit-overflow-scrolling: touch;
 }
 
 .nav-scroll::-webkit-scrollbar { height: 0; }
@@ -162,7 +166,7 @@ html, body {
 }
 
 /* ======================================================
-   HERO BACKGROUND & CHARACTER (MOBILE FIRST)
+   HERO BACKGROUND & CHARACTER (FULL BLEED — INTENTIONAL)
 ====================================================== */
 
 #hero-bg {
@@ -185,6 +189,7 @@ html, body {
   z-index: 2;
   pointer-events: none;
   animation: cameraMove 14s ease-in-out infinite alternate;
+  will-change: transform;
 }
 
 @keyframes cameraMove {
@@ -221,6 +226,22 @@ html, body {
 }
 
 /* ======================================================
+   GLOBAL READING FRAME — LOCKED (FOR ALL OTHER PAGES)
+====================================================== */
+
+.reading-frame,
+.page-inner > section,
+.page-inner > .reading-section {
+  max-width: 720px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+  content-visibility: auto;
+  contain-intrinsic-size: 600px;
+}
+
+/* ======================================================
    ANIMATIONS
 ====================================================== */
 
@@ -242,6 +263,18 @@ html, body {
 @keyframes fadeOut {
   from { opacity: 1; }
   to   { opacity: 0; }
+}
+
+/* ======================================================
+   PERFORMANCE & ACCESSIBILITY — LOCKED
+====================================================== */
+
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+  }
 }
 
 /* ======================================================
@@ -276,9 +309,17 @@ html, body {
     letter-spacing: 0.22em;
   }
 
+  .reading-frame,
+  .page-inner > section,
+  .page-inner > .reading-section {
+    max-width: 900px;
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 </style>
+
 
 </head>
 
