--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@ html, body {
     background:#000;
     color:#f2f2f2;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    overflow:hidden;
+    overflow-x:hidden;
 }
 
 /* =========================================================
@@ -42,7 +42,7 @@ html, body {
     overflow-y:hidden;
     white-space:nowrap;
     -webkit-overflow-scrolling:touch;
-    padding:0 4vw;
+    padding:0 16px; /* FIXED PX FOR MOBILE DENSITY */
     display:flex;
     align-items:center;
 }
@@ -98,6 +98,7 @@ html, body {
     letter-spacing:0.3em;
     color:#ffffff;
     white-space:nowrap;
+    will-change:transform;
 }
 
 .page-frame-outer::before {
@@ -137,6 +138,7 @@ html, body {
     display:inline-block;
     padding-left:100%;
     animation:arabic-scroll 18s linear infinite;
+    will-change:transform;
 }
 
 @keyframes arabic-scroll {
@@ -164,15 +166,28 @@ html, body {
         0 24px 80px rgba(0,0,0,0.95);
     background:#000;
     position:relative;
-    padding:78px 4vw 120px;
+    padding:78px 0 120px; /* vw REMOVED */
+}
+
+/* =========================================================
+   GLOBAL READING FRAME — LOCKED (THE FIX)
+   ========================================================= */
+.reading-frame,
+.page-inner > section,
+.page-inner > .movement-block {
+    max-width:720px;
+    margin-left:auto;
+    margin-right:auto;
+    padding-left:16px;
+    padding-right:16px;
+    content-visibility:auto;
+    contain-intrinsic-size:700px;
 }
 
 /* =========================================================
    5. EPÒK MOVEMENT (MOBILE FIRST)
    ========================================================= */
 .movement-block {
-    max-width:100%;
-    margin:0 auto;
     border-radius:16px;
     padding:24px 18px;
     background:linear-gradient(135deg, rgba(196,168,107,0.12), rgba(47,93,140,0.14));
@@ -205,7 +220,7 @@ html, body {
 }
 
 /* =========================================================
-   6. STEP BANNER (MOBILE FIRST)
+   6. STEP BANNER (FULL BLEED — INTENTIONAL)
    ========================================================= */
 .step-banner-wrapper {
     width:100%;
@@ -243,13 +258,19 @@ html, body {
     gap:18px;
 }
 
-.pb-preview-button img {
-    max-width:200px;
-    height:auto;
+/* =========================================================
+   8. PERFORMANCE & ACCESSIBILITY — LOCKED
+   ========================================================= */
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration:0.01ms !important;
+        animation-iteration-count:1 !important;
+        transition-duration:0.01ms !important;
+    }
 }
 
 /* =========================================================
-   8. DESKTOP ENHANCEMENTS ONLY
+   9. DESKTOP ENHANCEMENTS ONLY
    ========================================================= */
 @media (min-width: 769px) {
 
@@ -281,8 +302,15 @@ html, body {
         padding:88px 6vw 140px;
     }
 
-    .movement-block {
+    .reading-frame,
+    .page-inner > section,
+    .page-inner > .movement-block {
         max-width:900px;
+        padding-left:0;
+        padding-right:0;
+    }
+
+    .movement-block {
         padding:32px 24px;
     }
 
@@ -303,6 +331,7 @@ html, body {
     }
 }
 </style>
+
 
 </head>
 
